# Application

./: .gitmodules  CMakeLists.txt  README.md  example.cpp  glew.cmake  sdl2.cmake
include/application/: application.hpp  window.hpp  window_listener.hpp  window_renderer.hpp
include/lit/application/: application.hpp  assert.hpp  platform.hpp  window.hpp  window_listener.hpp  window_renderer.hpp
src/: application.cpp  window.cpp
